<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/text_nb_steps"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nbStepStart" />

    <TextView
        android:id="@+id/text_nb_metre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/metre" />

    <TextView
        android:id="@+id/text_date_start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dateStart" />

    <TextView
        android:id="@+id/text_speed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/speed" />

    <Button
        android:id="@+id/btn_stop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/stop"
        android:onClick="stopCourse"/>

</LinearLayout>